--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -9,6 +9,7 @@
     height: 100px;
     img {
         height:100px;
+        border-radius: 100%;;
     }
     margin-left: 100px;
     margin-right: auto;
