added hover animations to Navbar.js

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -32,3 +32,28 @@
     justify-content: center;
     align-items: center;
 }
+
+.animate {
+    display: inline-block;
+    position: relative;
+}
+  
+.animate::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #121212;
+    transition: transform 0.25s ease-out;
+    transform-origin: bottom center;
+}
+
+.animate:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom center;
+  }
+
+  
