--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,8 +8,8 @@
 .logo {
     height: 100px;
     img {
-        height:100px;
-        border-radius: 100%;;
+        height: 100px;
+        border-radius: 100%;
     }
     margin-left: 100px;
     margin-right: auto;
@@ -54,6 +54,30 @@
 .animate:hover::after {
     transform: scaleX(1);
     transform-origin: bottom center;
-  }
+}
 
-  
+/* for mobile devices */
+@media (max-width: 768px) {
+    .navbar {
+        flex-direction: column;
+        padding: 10px;
+    }
+
+    .logo {
+        margin: 0 auto 20px auto;
+    }
+
+    .navbar-menu {
+        margin: 0;
+        gap: 20px;
+        font-size: 2rem;
+    }
+
+    .navbar-menu li {
+        margin: 0;
+    }
+
+    .navbar-right {
+        margin-top: 20px;
+    }
+}
